// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > :props > :customValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :defaultValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :disabled 1`] = `
<div
  class="t-switch t-size-m t-is-disabled"
  disabled="true"
>
  <span
    class="t-switch__handle t-is-disabled"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m t-is-disabled"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :label 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    close
  </div>
</div>
`;

exports[`Switch > :props > :loading 1`] = `
<div
  class="t-switch t-size-m t-is-loading"
  disabled="false"
>
  <span
    class="t-switch__handle t-is-loading"
  >
    <div
      class="t-loading--center t-size-s t-loading"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="small"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :modelValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :onChange 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :size 1`] = `
<div
  class="t-switch t-size-s"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-s"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > :props > :value 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`Switch > <slot> > <label> 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    
    TDesign
    
  </div>
</div>
`;

exports[`Switch > @event > Event passthrough: change 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :customValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :defaultValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :disabled 1`] = `
<div
  class="t-switch t-size-m t-is-disabled"
  disabled="true"
>
  <span
    class="t-switch__handle t-is-disabled"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m t-is-disabled"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :label 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    close
  </div>
</div>
`;

exports[`switch > :props > :modelValue 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :onChange 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :size 1`] = `
<div
  class="t-switch t-size-s"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-s"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > :props > :value 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;

exports[`switch > <slot> > <label> 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    
    TDesign
    
  </div>
</div>
`;

exports[`switch > @event > event passthrough: change 1`] = `
<div
  class="t-switch t-size-m"
  disabled="false"
>
  <span
    class="t-switch__handle"
  >
    <!---->
  </span>
  <div
    class="t-switch__content t-size-m"
  >
    <!---->
  </div>
</div>
`;
